Allow building on Java 11 (Jigsaw modules)
Ports PR #2812 over to 2.x as a single commit.